# CodBo6_Bot_Manager_Zeus

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py
backend/: app.py  endpoints.py
backend/handlers/: misc_handlers.py  misc_utils.py  servers_handler.py
backend/utils/: misc_utils.py  response_helper.py  server_utils.py
config/: servers.ini
frontend_ui/: index.html  package-lock.json  package.json
frontend_ui/src/: main.js
frontend_ui/src/api/: axiosInstance.js
frontend_ui/src/api/repositories/: botManagerRepository.js  index.js
frontend_ui/src/assets/styles/: global.css
frontend_ui/src/components/: ControllerComponent.vue  GlobalLoader.vue  IpInputDialog.vue  LeftStickyDrawer.vue  RightStickyDrawer.vue  Toolbar.vue
frontend_ui/src/constants/: appConfig.json
frontend_ui/src/layouts/: default.vue
frontend_ui/src/pages/: gamepad.vue  index.vue  server-logs.vue  servers.vue
frontend_ui/src/plugins/: index.js  vuetify.js
frontend_ui/src/stores/: loggerStore.js  serverStore.js
frontend_ui/src/styles/: settings.scss
frontend_ui/src/utils/: withLogging.js
server_script/: hwid_whitelist.ini  zeus_server_script.py
src/zeus_cod_bo6_bot_manager/: __init__.py  __main__.py
src/zeus_cod_bo6_bot_manager/backend/: app.py  database.py  endpoints.py
src/zeus_cod_bo6_bot_manager/backend/handlers/: misc_handlers.py  servers_handler.py
src/zeus_cod_bo6_bot_manager/backend/utils/: misc_utils.py  server_utils.py
src/zeus_cod_bo6_bot_manager/frontend_ui/: index.html
(+13 files in other folders)
