[metadata]
name = zeus_cod_bo6_bot_manager
version = 0.0.1
author = SatyaJit Pradhan
author_email = hello.theappstack@gmail.com
description = A admin panel for controlling gamepad inputs and managing HWIDs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satyajiit/CodBo6_Bot_Manager_Zeus
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask-cors
    Flask
    PySide6
    PyQtWebEngine
    pyperclip
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zeus_cod_bo6_bot_manager = zeus_cod_bo6_bot_manager.__main__:main
